--- a/frontend/src/Components/Input/Input.module.css
+++ b/frontend/src/Components/Input/Input.module.css
@@ -15,7 +15,7 @@
   height: 40px;
   padding: 8px 12px;
 
-  border: 2px solid #2c6bed;
+  border: 2px solid #004940;
   border-radius: 10px;
 
   font-size: 1rem;
