--- a/frontend/src/pages/Login/LoginPage.module.css
+++ b/frontend/src/pages/Login/LoginPage.module.css
@@ -3,17 +3,18 @@
   height: 100vh;
 
   background: #004940;
+  font-family: poppins, sans-serif;
 
   display: flex;
-  flex-direction: raw;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  gap: 20px;
   overflow: hidden;
 }
 
 .logo {
-  width: 190px;
+  width: 120px;
   object-fit: contain;
   margin-bottom: 25px;
 }
@@ -24,20 +25,19 @@
 
   background: #ffffff;
   border-radius: 18px;
-  border: 2px solid #2c6bed;
+  border: 2px solid #546068;
 
   display: flex;
   flex-direction: column;
 
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.50);
 }
 
 .title {
   font-size: 1.6rem;
   font-weight: bold;
-  color: #222;
+  color: #004940;
   text-align: center;
-
   margin-bottom: 20px;
 }
 
@@ -45,7 +45,7 @@
   width: 100%;
   height: 45px;
 
-  background: #2c6bed;
+  background: #004940;
   color: white;
 
   border: none;
@@ -62,12 +62,12 @@
 }
 
 .submitButton:hover {
-  background: #1a4dcc;
+  background: #1B876C;
   transform: translateY(-2px);
 }
 
 .submitButton:active {
-  transform: scale(0.97);
+  transform: scale(0.70);
 }
 
 .forgotPassword {
@@ -76,12 +76,13 @@
 }
 
 .forgotPassword a {
-  color: #0055ff;
+  color: #546068;
   text-decoration: none;
   font-size: 14px;
 }
 
 .forgotPassword a:hover {
   text-decoration: underline;
+  color:#1B876C
 }
 
