--- a/frontend/src/Components/CardOption/CardOption.module.css
+++ b/frontend/src/Components/CardOption/CardOption.module.css
@@ -41,8 +41,8 @@
 
 .cardTitle {
   font-size: 1.25rem;
-  font-family: poppins, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   font-weight: 600;
-  color: #2b2b2b;
+  color: #004940;
   text-align: center;
 }
