--- a/frontend/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/frontend/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -18,10 +18,14 @@
   margin-bottom: 12px;
   font-size: 24px;
   text-align: center;
+  font-family: "Poppins", Arial, sans-serif;
+  color: #004940;
 }
 
 .subtitle {
   text-align: center;
+  font-family: "Poppins", Arial, sans-serif;
+  font-weight: 400;
   font-size: 14px;
   color: #555;
   margin-bottom: 20px;
@@ -31,16 +35,18 @@
   width: 100%;
   padding: 12px;
   margin-top: 8px;
-  background-color: #0066ff;
+  background-color: #004940;
   color: white;
   border: none;
   border-radius: 8px;
+  font-family: "Poppins", Arial, sans-serif;
+  font-weight: 600;
   font-size: 16px;
   cursor: pointer;
 }
 
 .submitButton:hover {
-  background-color: #004ecc;
+  background-color: #1B876C;
 }
 
 .backLink {
@@ -49,10 +55,14 @@
 }
 
 .backLink a {
-  color: #0055ff;
+  color: #546068;
   text-decoration: none;
+  font-size: 14px;
+  font-family: "Poppins", Arial, sans-serif;
+  font-weight: 600;
 }
 
 .backLink a:hover {
   text-decoration: underline;
+  color: #1B876C;
 }
