--- a/frontend/src/pages/Login/LoginPage.module.css
+++ b/frontend/src/pages/Login/LoginPage.module.css
@@ -3,7 +3,8 @@
   height: 100vh;
 
   background: #004940;
-  font-family: poppins, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
+  font-weight: 600;
 
   display: flex;
   flex-direction: column;
@@ -35,7 +36,7 @@
 
 .title {
   font-size: 1.6rem;
-  font-weight: bold;
+  font-weight: 600;
   color: #004940;
   text-align: center;
   margin-bottom: 20px;
