--- a/frontend/src/pages/Login/LoginPage.module.css
+++ b/frontend/src/pages/Login/LoginPage.module.css
@@ -42,6 +42,12 @@
   margin-bottom: 20px;
 }
 
+.errorMessage {
+  color: #ff0000;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
 .submitButton {
   width: 100%;
   height: 45px;
